syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "com.example.protodatastorecomposesample";
option java_multiple_files = true;

message PersonPreferences {
  int32 id = 1;
  string name = 2;
  double height = 3;
  bool is_student = 4;

  enum PhoneType {
    UNSPECIFIED = 0;
    MOBILE = 1;
    HOME = 2;
    WORK = 3;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  PhoneNumber phones = 5;

  google.protobuf.Timestamp last_updated = 6;
}
